--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">DJEsocials</div>
             <div class="nav-links">
-                <a href="firebase-home.html" class="nav-link active">Home</a>
+                <a href="home.html" class="nav-link active">Home</a>
                 <a href="firebase-friends.html" class="nav-link">Friends</a>
                 <a href="firebase-messages.html" class="nav-link">Messages</a>
                 <a href="firebase-profile.html" class="nav-link">Profile</a>
