--- a/firebase-friends.html
+++ b/firebase-friends.html
@@ -203,7 +203,7 @@
         <div class="nav-container">
             <div class="nav-logo">DJEsocials</div>
             <div class="nav-links">
-                <a href="firebase-home.html" class="nav-link">Home</a>
+                <a href="home.html" class="nav-link">Home</a>
                 <a href="firebase-friends.html" class="nav-link active">Friends</a>
                 <a href="firebase-messages.html" class="nav-link">Messages</a>
                 <a href="firebase-profile.html" class="nav-link">Profile</a>
