--- a/firebase-profile.html
+++ b/firebase-profile.html
@@ -493,7 +493,7 @@
         document.getElementById('logoutBtn').addEventListener('click', async function() {
             if (confirm('Are you sure you want to logout?')) {
                 await signOut(auth);
-                window.location.href = 'firebase-index.html';
+                window.location.href = 'index.html';
             }
         });
     </script>
