--- a/home.html
+++ b/home.html
@@ -380,7 +380,7 @@
             if (confirm('Are you sure you want to logout?')) {
                 try {
                     await signOut(auth);
-                    window.location.href = 'firebase-index.html';
+                    window.location.href = 'index.html';
                 } catch (error) {
                     console.error('Logout error:', error);
                     alert('Error logging out. Please try again.');
