--- a/firebase-profile.html
+++ b/firebase-profile.html
@@ -256,7 +256,7 @@
         <div class="nav-container">
             <div class="nav-logo">DJEsocials</div>
             <div class="nav-links">
-                <a href="firebase-home.html" class="nav-link">Home</a>
+                <a href="home.html" class="nav-link">Home</a>
                 <a href="firebase-friends.html" class="nav-link">Friends</a>
                 <a href="firebase-messages.html" class="nav-link active">Messages</a>
                 <a href="firebase-profile.html" class="nav-link">Profile</a>
@@ -315,7 +315,7 @@
 
         onAuthStateChanged(auth, async (user) => {
             if (!user) {
-                window.location.href = 'firebase-index.html';
+                window.location.href = 'index.html';
                 return;
             }
             
