--- a/firebase-friends.html
+++ b/firebase-friends.html
@@ -262,7 +262,7 @@
         // Check authentication
         onAuthStateChanged(auth, async (user) => {
             if (!user) {
-                window.location.href = 'firebase-index.html';
+                window.location.href = 'index.html';
                 return;
             }
             
