--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
         // Check authentication
         onAuthStateChanged(auth, async (user) => {
             if (!user) {
-                window.location.href = 'firebase-index.html';
+                window.location.href = 'index.html';
                 return;
             }
             
