--- a/friends.html
+++ b/friends.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DJEsocials - Friends</title>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="firebase-styles.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         .friends-main {
             max-width: 900px;
@@ -204,9 +204,9 @@
             <div class="nav-logo">DJEsocials</div>
             <div class="nav-links">
                 <a href="home.html" class="nav-link">Home</a>
-                <a href="firebase-friends.html" class="nav-link active">Friends</a>
-                <a href="firebase-messages.html" class="nav-link">Messages</a>
-                <a href="firebase-profile.html" class="nav-link">Profile</a>
+                <a href="friends.html" class="nav-link active">Friends</a>
+                <a href="messages.html" class="nav-link">Messages</a>
+                <a href="profile.html" class="nav-link">Profile</a>
                 <button class="logout-btn" id="logoutBtn">Logout</button>
             </div>
         </div>
@@ -241,15 +241,16 @@
         import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
         import { getDatabase, ref, get, set, remove, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
-        // Firebase configuration - REPLACE WITH YOUR CREDENTIALS
+        // Firebase configuration
         const firebaseConfig = {
-          apiKey: "AIzaSyBToS2mXevsJAEZXnvbJrF5an6Q1iH1BNk",
-          authDomain: "djesocials-e4120.firebaseapp.com",
-          projectId: "djesocials-e4120",
-          storageBucket: "djesocials-e4120.firebasestorage.app",
-          messagingSenderId: "578832879687",
-          appId: "1:578832879687:web:a802f513f51016267ba162",
-          measurementId: "G-DZR1D2STQJ"
+            apiKey: "AIzaSyBToS2mXevsJAEZXnvbJrF5an6Q1iH1BNk",
+            authDomain: "djesocials-e4120.firebaseapp.com",
+            databaseURL: "https://djesocials-e4120-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "djesocials-e4120",
+            storageBucket: "djesocials-e4120.firebasestorage.app",
+            messagingSenderId: "578832879687",
+            appId: "1:578832879687:web:a802f513f51016267ba162",
+            measurementId: "G-DZR1D2STQJ"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -422,7 +423,7 @@
         // Go to messages
         window.goToMessages = function(friendId) {
             sessionStorage.setItem('openChatWith', friendId);
-            window.location.href = 'firebase-messages.html';
+            window.location.href = 'messages.html';
         };
 
         // Load friends list
